# MeetingSummary

./: .env.example  .gitignore  pyproject.toml  run.bat
src/meet_conclusion/: __init__.py  __main__.py  app.py  config.py
src/meet_conclusion/asr/: base.py  doubao_asr.py  transcript_merger.py
src/meet_conclusion/audio/: __init__.py  audio_buffer.py  chunk_writer.py  wasapi_capture.py
src/meet_conclusion/core/: meeting_manager.py  pipeline.py  recording_engine.py  task_queue.py
src/meet_conclusion/db/: database.py  models.py  repositories.py
src/meet_conclusion/diarization/: __init__.py
src/meet_conclusion/llm/: __init__.py  base.py  doubao_llm.py  minutes_generator.py  prompt_templates.py
src/meet_conclusion/services/: meeting_service.py  note_service.py
src/meet_conclusion/ui/: main_window.py
src/meet_conclusion/ui/dialogs/: __init__.py  settings_dialog.py
src/meet_conclusion/ui/widgets/: meeting_form.py  meeting_list.py  minutes_viewer.py  note_editor.py  recording_panel.py
src/meet_conclusion/utils/: logger.py  time_utils.py
