[project]
name = "meet-conclusion"
version = "0.1.0"
description = "会议纪要AI桌面应用 - 自动录制系统音频，生成个性化会议纪要"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "PyAudio>=0.2.14",
    "soundfile>=0.12.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
diarization = [
    "speechbrain>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.3.0",
]

[project.scripts]
meet-conclusion = "meet_conclusion.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meet_conclusion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
